Working on the developer API, checking for leaks etc...

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,11 @@ gtk_castxml2pony_use:
 	mkdir -p Gtk4
 	mv use.xml usetypes.xml renderuse.xml Gtk4
 
+gtk_castxml2pony_structs:
+	../../castxml2pony/castxml2pony -x gtk.xml -S
+	mkdir -p Gtk4
+	mv renderstructs.xml structs.xml types.xml Gtk4
+
 glib_castxml2pony_use:
 	../../castxml2pony/castxml2pony -x gtk.xml -u `grep File gtk.xml  | grep '/glib-2.0/' | grep -v depre | cut -d'"' -f2 | tr '\n' ' '`
 	mkdir -p GLib
@@ -15,6 +20,9 @@ glib_castxml2pony_use:
 
 gtk_genuse:
 	java -jar /usr/share/java/Saxon-HE.jar -xi Gtk4/use.xml makeuse.xsl
+
+gtk_genstruct:
+	java -jar /usr/share/java/Saxon-HE.jar -xi Gtk4/structs.xml makestruct.xsl
 
 glib_genuse:
 	java -jar /usr/share/java/Saxon-HE.jar -xi GLib/use.xml makeuse.xsl
